Up(With Backend)

--- a/InventoryMS/View/ProductManagement/ProductUserControl.xaml
+++ b/InventoryMS/View/ProductManagement/ProductUserControl.xaml
@@ -52,15 +52,17 @@
         </StackPanel>
 
         <!-- Product DataGrid -->
-        <DataGrid x:Name="ProductDataGrid" Grid.Row="3" AutoGenerateColumns="False" HeadersVisibility="Column"
-                  CanUserAddRows="False" IsReadOnly="True" BorderBrush="Gray" BorderThickness="1"
-                  Background="White" Margin="0 0 0 10">
+        <DataGrid x:Name="ProductDataGrid" Grid.Row="3" AutoGenerateColumns="True" 
+          HeadersVisibility="Column" CanUserAddRows="False" IsReadOnly="True"
+          BorderBrush="Gray" BorderThickness="1" Background="White" Margin="0 0 0 10"
+          ItemsSource="{Binding}">
+
             <DataGrid.Columns>
                 <!-- Product Image -->
                 <DataGridTemplateColumn Header="Image" Width="80">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Image Source="{Binding ImagePath}" Width="50" Height="50"/>
+                            <Image Source="{Binding ImageSource}" Width="50" Height="50"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
